--- a/style.css
+++ b/style.css
@@ -70,8 +70,8 @@ h2{
 }
 /* This begins the CSS for the navigational part of the app */
 footer{
-  
   width: 640px;
+  height: 960px;
   display: flex;
   justify-content: space-around;
   align-items: center;
