--- a/style.css
+++ b/style.css
@@ -71,9 +71,30 @@ h2{
 /* This begins the CSS for the navigational part of the app */
 footer{
   width: 640px;
-  height: 960px;
+  height: 90px;
+  bottom : 0;
+  position:fixed;
   display: flex;
-  justify-content: space-around;
+  flex-direction: row;
+  justify-content: space-evenly;
   align-items: center;
+  text-align: center;
+  background-color: aqua;
+}
+.nav{
+    color:black;
+    text-decoration: none;
+}
+.nav:visited{
+    color:black;
+}
+.nav-img{
+ height:70px;
+}
+.nav:hover{
+    background-color:aliceblue;
+}
+#nav-curr{
+    background-color: aliceblue;
 }
 
