--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+h1{
+    text-align:center;
+}
 .device{
     margin: auto;
     width: 640px;
@@ -41,7 +44,7 @@ h2{
 .deviceSetting{
     width: 640px;
     height: 960px;
-    background-color: aqua;
+    background-color: orange;
     margin:auto;
     position:relative;
     overflow: hidden;
@@ -73,13 +76,14 @@ footer{
   width: 640px;
   height: 90px;
   bottom : 0;
+  margin:auto;
   position:fixed;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   text-align: center;
-  background-color: aqua;
+  background-color: orange;
 }
 .nav{
     color:black;
@@ -92,9 +96,26 @@ footer{
  height:70px;
 }
 .nav:hover{
-    background-color:aliceblue;
+    background-color:beige;
 }
 #nav-curr{
-    background-color: aliceblue;
+    background-color: beige;
+}
+#nav-curr{
+    background-color:beige;
+}
+#black-bg{
+    text-align:center; 
+    background-color:black;
+    color:yellow;
+    font-size: 1.5rem;
+    font-style: bold;
+}
+#yellow-bg{
+    text-align:center; 
+    background-color:yellow;
+    color:purple;
+    font-size: 1.5rem;
+    font-style: bold;
 }
 
