--- a/todo-style.css
+++ b/todo-style.css
@@ -1,10 +1,13 @@
 
+h1{
+    text-align:center;
+}
 .device{
     margin: auto;
     width: 640px;
     height: 960px;
     overflow: hidden;
-    background-color: lightpink;
+    background-color: orange;
     position: relative;
 }
 
@@ -69,7 +72,7 @@ ul li.checked::before {
   
 /* style the header */
 .header {
-    background-color: lightpink;
+    background-color: orange;
     padding: 30px 40px;
     color: white;
     text-align: center;
@@ -103,4 +106,35 @@ input {
   
 .addBtn:hover {
     background-color: #bbb;
+}
+
+/* This begins the CSS for the navigational part of the app */
+footer{
+  width: 640px;
+  height: 90px;
+  bottom : 0;
+  margin:auto;
+  position:fixed;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  background-color: orange;
+}
+.nav{
+    color:black;
+    text-decoration: none;
+}
+.nav:visited{
+    color:black;
+}
+.nav-img{
+ height:70px;
+}
+.nav:hover{
+    background-color:beige;
+}
+#nav-curr{
+    background-color: beige;
 }
